links added card pics out of place footer issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,14 +8,19 @@ div {
     border-radius: 5px;
     padding: 20px;
 }
-
+/* Background */
 body {
-    background-image: url("/assets/images/BackgroundPattern/what-the-hex/what-the-hex.png");
+    background-image: url("../images/what-the-hex.png");
     background-repeat: repeat;
     width: 960px;
     margin: 0 auto 0 auto;
 }
-
+.navbar {
+    background-image: url("../images/NavBackground.jpg")
+}
+.nav-link {
+    color: rgb(11, 228, 22);
+}
 p {
     line-height: 1.6;
 }
@@ -31,13 +36,16 @@ p {
     background: white;
     margin-top: 30px;
 }
-
+a {
+    align-content: right;
+}
 /* Portfolio pics height and width */
-        #Hangman {
+        #Crystal {
             width: 200px;
             height: 200px;
+            float: inherit;
         }
-        #RPG {
+        #TrainSch {
             width: 200px;
             height: 200px;
         }
@@ -45,13 +53,17 @@ p {
             width: 200px;
             height: 200px;
         }
-        #RIW {
+        #Giftastic {
             width: 200px;
             height: 200px;
+            margin: auto;
         }
         #RPS {
             width: 200px;
             height: 200px;
+        }
+        img{
+            margin: auto;
         }
 
 /* Form stuff */
@@ -91,15 +103,16 @@ body > .container {
 }
 /* Footer color aqua */
 .container {
-    background-color: aqua;
+    background-image: url("../images/FootBackground.jpg");
+    
 }
-/* Images in cards centered */
-img {
-    margin: auto;
-}
+
 /* Card titles centered */
 .card-title {
     text-align: center;
+}
+.card {
+    background-image: url("../images/cardBackground.jpg")
 }
 /* Responsiveness */
         @media screen and (max-width: 980px) {
